jackett/00-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jackett
  labels:
    istio-injection: enabled
