jackett/jackett.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: jackett
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9117
  selector:
    app: jackett
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jackett
  namespace: jackett
spec:
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
        readinessProbe:
          httpGet:
            path: /UI/Login
            port: 9117
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /UI/Login
            port: 9117
          failureThreshold: 3
          timeoutSeconds: 15
          periodSeconds: 15
          initialDelaySeconds: 60
        ports:
        - containerPort: 9117
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: blackhole
          mountPath: /downloads
      nodeName: core1
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: blackhole
        emptyDir: {}
