jackett/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: bibliotik.me
  namespace: jackett
spec:
  hosts:
  - bibliotik.me
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.broadcasthe.net
  namespace: jackett
spec:
  hosts:
  - api.broadcasthe.net
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gazellegames.net
  namespace: jackett
spec:
  hosts:
  - gazellegames.net
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www.myanonamouse.net
  namespace: jackett
spec:
  hosts:
  - www.myanonamouse.net
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: passthepopcorn.me
  namespace: jackett
spec:
  hosts:
  - passthepopcorn.me
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: redacted.ch
  namespace: jackett
spec:
  hosts:
  - redacted.ch
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
